testsuite/typechecking/compile-fail/freeze.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
class A { }

class Main
{
  main() { }

  // CHECK-L: freeze.verona:${LINE:+1}:3: error: Inference failed for method test1
  test1(x: A & imm) {
    freeze(x);
  }

  // CHECK-L: freeze.verona:${LINE:+1}:3: error: Inference failed for method test2
  test2[X](x: X) {
    freeze(x);
  }

  // CHECK-L: freeze.verona:${LINE:+1}:3: error: Inference failed for method test3
  test3(x: A & (iso | imm)) {
    freeze(x);
  }

  // CHECK-L: freeze.verona:${LINE:+1}:3: error: Inference failed for method test4
  test4(x: A & mut) {
    freeze(x);
  }
}

